# LibraryGames

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  app.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  start.ps1
LibraryGames/: __init__.py  auth.py  blog.py  db.py  games.py  schema.sql
LibraryGames/static/: style.css
LibraryGames/templates/: base.html
LibraryGames/templates/blog/: index.html
LibraryGames/templates/games/: index.html  lists.html  update.html
tests/: conftest.py  test_auth.py  test_blog.py  test_browser_integration.py  test_db.py  test_factory.py  test_games.py  test_playwright_e2e.py
